Fix some margins on Mobile Menu

--- a/public/stylesheets/partials/_navbar-animated.scss
+++ b/public/stylesheets/partials/_navbar-animated.scss
@@ -1,8 +1,10 @@
 .burgerMenu {
     display: block;
     position: absolute;
-    top: 2rem;
+    padding-top: 2rem;
     padding-left: 2rem;
+    top: 0;
+    left: 0;
 
     z-index: 1;
 
@@ -95,10 +97,10 @@
     &__items {
         position: absolute;
         width: 300px;
-        margin: -100px 0 0 0;
-        padding: 50px;
-        padding-top: 125px;
+        margin: -5rem 0 0 0;
+        padding: 5rem;
         left: 0;
+        min-height: 100vh;
 
         background: #ededed;
         list-style-type: none;
